# uScope

./: README.md  pyproject.toml
.github/workflows/: python-ci.yml
examples/: README.md
examples/reference/: README.md  reference.S  reference.json  reference.out
examples/vector_addition/: README.md  scalar.S  vec.S
src/pipeview_perfetto/: O3.py  __init__.py  converter.py  events.py  main.py  parser.py  thread_pool.py  utils.py
src/pipeview_perfetto/configs/: settings.json
src/uScope/: O3.py  config.py  converter.py  events.py  main.py  parser.py  thread_pool.py
src/uScope/configs/: colors.json  func_units.json  settings.json  stage_names.json
tests/: __init__.py  conftest.py  test_config.py  test_converter.py  test_events.py  test_flow.py  test_main.py  test_parser.py  test_thread_pool.py
